# dos-bot

./: .gitignore  Cargo.toml  Makefile.toml  README.rst  config.example.json  default.nix  docker-compose.yml  docker.nix  rust-toolchain.toml  shell.nix
.github/workflows/: rust.yml
nix/: rust.nix
src/: commands.rs  config.rs  database.rs  main.rs
