[package]
name = "dos_bot"
version = "0.1.0"
authors = ["Fuwn <fuwnzy@gmail.com>"]
edition = "2018"
readme = "README.rst"
homepage = "https://github.com/fuwn/dos-bot"
repository = "https://github.com/fuwn/dos-bot"
license = "GPL-3.0-only"
keywords = ["rust", "assembly", "discord"]
publish = false

[dependencies]
# Discord
serenity = { version = "0.10.8", features = ["cache", "framework", "standard_framework", "rustls_backend"] }

# Utility
dotenv = "0.15.0"
tokio = { version = "1.7.1", features = ["macros", "signal", "rt-multi-thread"] }
config = "0.11.0"
lazy_static = "1.4.0"
simple-error = "0.2.3"
array_tool = "1.0.3"

# Serialization
serde = "1.0.126"
serde_derive = "1.0.126"

# Database
simplebase = "0.3.35"

# Logging
log = "0.4.14"
pretty_env_logger = "0.4.0"
